--- a/styles.css
+++ b/styles.css
@@ -714,9 +714,12 @@ nav {
 .pricing-features {
   list-style: none;
   margin-bottom: 2rem;
-  text-align: left;
-  padding-left: 25rem;
-  padding-right: 1rem;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .pricing-features li {
@@ -724,12 +727,15 @@ nav {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  text-align: left;
 }
 
 .pricing-features li i {
   margin-right: 0.5rem;
   color: var(--success-color);
   min-width: 16px;
+  display: inline-flex;
+  justify-content: center;
 }
 
 .pricing-features li.disabled {
@@ -982,6 +988,11 @@ footer {
   .pricing-card.featured:hover {
     transform: translateY(-5px);
   }
+
+  .pricing-features {
+    padding-left: 0;
+    padding-right: 0;
+  }
 }
 
 @media (max-width: 576px) {
@@ -1003,5 +1014,10 @@ footer {
     flex-direction: column;
     gap: 1rem;
     text-align: center;
+  }
+
+  .pricing-features {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
